tests/ui/infinite/infinite-tag-type-recursion.stderr
error[E0072]: recursive type `MList` has infinite size
  --> $DIR/infinite-tag-type-recursion.rs:1:1
   |
LL | enum MList { Cons(isize, MList), Nil }
   | ^^^^^^^^^^               ----- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to break the cycle
   |
LL | enum MList { Cons(isize, Box<MList>), Nil }
   |                          ++++     +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
